--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "gulp-util": "^3.0.6",
     "inquirer": "^0.12.0",
     "liferay-plugin-node-tasks": "^1.0.9",
+    "liferay-theme-finder": "^1.0.2",
     "lodash": "^3.10.0",
     "minimist": "^1.1.0",
     "node-bourbon": "4.2.3",
